--- a/src/components/card/productCard.module.scss
+++ b/src/components/card/productCard.module.scss
@@ -28,7 +28,7 @@
         flex-direction: column;
     }
 
-    &__backgraundProduct{
+    &__backgroundProduct{
         width: 300px;
         height: 300px;
         align-items: center;
@@ -192,7 +192,7 @@
                 display: flex;
                 flex-direction: row;
             }
-            &__backgraundProduct{
+            &__backgroundProduct{
                 width: 180px;
                 height: 180px;
                 padding: 20px 30px;
@@ -293,7 +293,7 @@
         width: 30vw;
     }
     @include mobile{
-        width: 39vw;
+        width: 35vw;
     }
 }
 .button_small{
@@ -314,7 +314,6 @@
 
     opacity: 0;
     transform: translateY(100%);
-    max-height: 0;
     overflow: hidden;
     transition: all 0.4s ease-in-out;
 
@@ -326,7 +325,7 @@
 
     &.hide {
         position: absolute;
-        bottom: -40px;
+        bottom: -100px;
         opacity: 0;
         transform: translateY(-100%);
     }
